--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.56.0",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
