--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,11 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@components": ["src/components/*"],
-      "@utils": ["src/utils/*"],
-      "@hooks": ["src/hooks/*"],
-      "@test": ["src/test/*"],
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+      "@lib/*": ["src/lib/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@test/*": ["src/test/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
