--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.56.0",
+    "axios": "^0.26.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
