--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.56.0",
+    "@googlemaps/react-wrapper": "^1.1.28",
+    "@react-google-maps/api": "^2.7.0",
     "axios": "^0.26.1",
     "next": "12.1.1",
     "react": "17.0.2",
