--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@aws-sdk/client-dynamodb": "^3.56.0",
     "@googlemaps/react-wrapper": "^1.1.28",
     "@react-google-maps/api": "^2.7.0",
+    "@types/react-geocode": "^0.2.0",
     "axios": "^0.26.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-geocode": "^0.2.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
