--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@googlemaps/react-wrapper": "^1.1.28",
     "@react-google-maps/api": "^2.7.0",
     "@types/react-geocode": "^0.2.0",
+    "ably": "^1.2.5-beta.1",
     "axios": "^0.26.1",
     "next": "12.1.1",
     "react": "17.0.2",
