--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@aws-sdk/client-dynamodb": "^3.56.0",
     "@googlemaps/react-wrapper": "^1.1.28",
     "@react-google-maps/api": "^2.7.0",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.25.0",
     "@types/react-geocode": "^0.2.0",
     "ably": "^1.2.5-beta.1",
     "axios": "^0.26.1",
@@ -19,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-geocode": "^0.2.3",
+    "stripe": "^8.212.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
