--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-geocode": "^0.2.0",
     "ably": "^1.2.5-beta.1",
     "axios": "^0.26.1",
+    "daisyui": "^2.13.4",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
